# KanaFix

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/kanafix/: Cargo.toml
crates/kanafix/src/: config.rs  foreground.rs  hook.rs  inject.rs  keys.rs  main.rs
docs/: rdp-input-analysis.md
