[package]
name = "kanafix"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fixes doubled Japanese input from iPad/iPhone over Windows RDP by re-pacing the synthetic VK_PACKET/Backspace stream for configured apps."

[dependencies]
anyhow = "1"
serde = { workspace = true }
toml = "1.1"

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
]
